<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical" >
 <FrameLayout
	android:layout_width="fill_parent"
	android:layout_height="wrap_content" 
	android:layout_marginTop="5dp"
	android:gravity="center"
	> 
    
  	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >
        
        <ImageView
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:background="@drawable/ca_title_info"
    	/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_ca_title"
            android:textColor="#FFFFFF"
            android:textSize="30dp" 
            android:layout_marginTop="23dp"
            />
    </LinearLayout>
            
    <ImageView
        android:layout_width="wrap_content"
    	android:layout_height="25sp"
    	android:layout_marginTop="58dp"
    	android:background="@drawable/ca_title_top_line"
    	/>
  </FrameLayout>  
  
    <FrameLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content" 
    	android:gravity="center"
        >
         <TextView 
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/str_ca_purse_title"
	    	android:textColor="@color/enable_text_color"
		    android:textSize="30sp"
		    android:layout_marginTop="30dp"
		    android:layout_gravity="center_horizontal"
    	/>

   		 <ImageView
	        android:layout_width="400dp"
	        android:layout_height="50dp"
	        android:layout_marginTop="50dp"
	        android:layout_gravity="center_horizontal"
	        android:background="@drawable/under_top" />
        
    </FrameLayout>

   
    <!-- For CA Purse List Start-->
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="33dp"
        android:layout_marginTop="10dp"
       	android:layout_marginLeft="120dp"
        android:layout_marginRight="100dp"
        android:orientation="horizontal" >
   		 
       <TextView
            android:id="@+id/textview_ca_purse_item_id_operator"
	        android:layout_height="30dp"
	        android:layout_width="120dp"
            android:gravity="center"
            android:text="@string/str_ca_op_operator_id"
            android:textColor="#ffffff"
	        android:textSize="22dp" />

        <TextView
            android:id="@+id/textview_ca_purse_item_id_head"
	        android:layout_height="30dp"
	        android:layout_width="250dp"
            android:gravity="center"
            android:text="@string/str_ca_purse_id"
            android:textColor="#ffffff"
	        android:textSize="22dp" />

        <TextView
            android:id="@+id/textview_ca_purse_item_points_Head"
            android:layout_height="30dp"
            android:layout_width="180dp"
            android:gravity="center"
            android:text="@string/str_ca_purse_points"
            android:textColor="#ffffff"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/textview_ca_purse_item_credit_Head"
            android:layout_height="30dp"
  	        android:layout_width="match_parent"   
            android:gravity="center"
            android:text="@string/str_ca_purse_credit"
            android:textColor="#ffffff"
            android:textSize="22dp" />
    </LinearLayout>
    <!-- For CA Purse List End-->
    

    <ListView
        android:id="@+id/listpurse"
        android:layout_width="match_parent"
    	android:layout_height="420dp"
    	android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
    	android:listSelector="@drawable/item_slector"
    	android:divider="@null">     
    </ListView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
        android:layout_width="match_parent"
    	android:layout_height="50dp"
    	android:background="@drawable/bottom"
    	android:baselineAlignBottom="true"
    	/>
    
        
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_ca_back_help"
            android:textSize="20sp" />
    </FrameLayout>


</LinearLayout>