<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/setting_list_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/pro_search" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="30dp"
            android:text="@string/setting_textview3"
            android:textColor="@color/enable_text_color"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@drawable/setting_list_uderline" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="800dp"
        android:layout_height="550dp"
        android:gravity="center" >

        <RelativeLayout
            android:layout_width="600dp"
            android:layout_height="500dp"
            android:background="@drawable/search_manual" >

            <TextView
                android:id="@+id/manual_textview"
                android:layout_width="@dimen/search_textview_w"
                android:layout_height="@dimen/search_textview_h"
                android:layout_marginLeft="180dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/setting_search_button1"
                android:textColor="@color/enable_text_color"
                android:textSize="28sp" />

            <ImageView
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="130dp"
                android:background="@drawable/under_top" />

            <TextView
                android:id="@+id/manual_textview1"
                android:layout_width="@dimen/search_textview_w"
                android:layout_height="@dimen/search_textview_h"
                android:layout_below="@id/manual_textview"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:text="@string/setting_search_manual_text1"
                android:textColor="@color/enable_text_color"
                android:textSize="@dimen/setting_button_textsize" />

            <TextView
                android:id="@+id/manual_textview2"
                android:layout_width="@dimen/search_textview_w"
                android:layout_height="@dimen/search_textview_h"
                android:layout_below="@id/manual_textview1"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:text="@string/setting_search_manual_text2"
                android:textColor="@color/enable_text_color"
                android:textSize="@dimen/setting_button_textsize" />

            <TextView
                android:id="@+id/manual_textview3"
                android:layout_width="@dimen/search_textview_w"
                android:layout_height="@dimen/search_textview_h"
                android:layout_below="@id/manual_textview2"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:text="@string/setting_search_manual_text3"
                android:textColor="@color/enable_text_color"
                android:textSize="@dimen/setting_button_textsize" />

            <Button
                android:id="@+id/manual_button"
                android:layout_width="@dimen/setting_button_w"
                android:layout_height="@dimen/setting_button_h"
                android:layout_below="@id/manual_textview3"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="30dp"
                android:text="@string/setting_search_manual_button"
                android:textColor="@color/enable_text_color"
                android:textSize="@dimen/setting_button_textsize" />

            <EditText
                android:id="@+id/manual_editview1"
                android:layout_width="@dimen/search_textview_w"
                android:layout_height="@dimen/search_textview_h"
                android:layout_below="@id/manual_textview"
                android:layout_marginTop="30dp"
                android:layout_toRightOf="@id/manual_textview2"
                android:singleLine="true"
                android:text="@string/setting_search_manual_edittext1"
                android:textColor="@color/enable_text_color"
                android:textSize="@dimen/setting_button_textsize" />

            <EditText
                android:id="@+id/manual_editview2"
                android:layout_width="@dimen/search_textview_w"
                android:layout_height="@dimen/search_textview_h"
                android:layout_below="@id/manual_editview1"
                android:layout_marginTop="30dp"
                android:layout_toRightOf="@id/manual_textview2"
                android:singleLine="true"
                android:text="@string/setting_search_manual_edittext2"
                android:textColor="@color/enable_text_color"
                android:textSize="@dimen/setting_button_textsize" />

            <Spinner
                android:id="@+id/manual_spinner"
                android:layout_width="@dimen/search_textview_w"
                android:layout_height="@dimen/search_textview_h"
                android:layout_below="@id/manual_editview2"
                android:layout_marginTop="30dp"
                android:layout_toRightOf="@id/manual_textview3"
                android:gravity="center"
                android:text="@string/setting_search_manual_edittext3"
                android:textColor="@color/enable_text_color"
                android:textSize="@dimen/setting_button_textsize" />
        </RelativeLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="25dp" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bottom" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/setting_textview2"
            android:textSize="20sp" />
    </FrameLayout>

</LinearLayout>